trying to fix hamburger icon on mobile safari

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ section {
     display: grid;
     grid-area: b;
     justify-content: end!important;
+    position: relative;
 }
 
 .menu {
